# SimpleSoftwareRasterizer

./: .gitignore  CMakeLists.txt  README.md  build-and-run.bat  gen-VS2019-x64.bat  shared.cmake
host-gdi/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  pch.hpp
host-gdk/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  pch.hpp
host-gtk/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  pch.hpp
librasterizer/: CMakeLists.txt  pch.hpp
librasterizer/detail/: BoundingBox2D.hpp  LookUpTable.hpp  Mesh.cpp  MeshCube.cpp  MeshSphere.cpp  Rasterizer.cpp  Texture.cpp  Tile.cpp  Tile.hpp  Vertex.hpp  basic-matrices.cpp  basic-matrices.hpp  clipping.cpp  clipping.hpp  gamma_bgra_t.cpp  glm-include.hpp  linear_rgba_t.cpp  obj-loader.cpp
librasterizer/include/rasterizer/: Mesh.hpp  Rasterizer.hpp  Texture.hpp  finally.hpp  gamma_bgra_t.hpp  linear_rgba_t.hpp  obj-loader.hpp
